Change color to green

--- a/deployment/flagd-flag-spec.yaml
+++ b/deployment/flagd-flag-spec.yaml
@@ -21,7 +21,7 @@ spec:
             "blue": "0000CC",
             "yellow": "yellow"
           },
-          "defaultVariant": "red",
+          "defaultVariant": "green",
           "state": "ENABLED"
         },
         "fib-algo": {
