--- a/deployment/flagd-flag-spec.yaml
+++ b/deployment/flagd-flag-spec.yaml
@@ -16,30 +16,12 @@ spec:
         },
         "hex-color": {
           "variants": {
-            "red": "CC0000",
-            "green": "00CC00",
-            "blue": "0000CC",
-            "yellow": "yellow"
+            "red": "c05543",
+            "green": "2f5230",
+            "blue": "0d507b",
           },
-          "defaultVariant": "red",
+          "defaultVariant": "green",
           "state": "ENABLED",
-          "targeting": {
-            "fractionalEvaluation": [
-              "userAgent",
-              [
-                "red",
-                50
-              ],
-              [
-                "blue",
-                20
-              ],
-              [
-                "green",
-                30
-              ]
-            ]
-          }
         },
         "fib-algo": {
           "variants": {
