--- a/deployment/flagd-flag-spec.yaml
+++ b/deployment/flagd-flag-spec.yaml
@@ -18,7 +18,7 @@ spec:
           "variants": {
             "red": "c05543",
             "green": "2f5230",
-            "blue": "0d507b",
+            "blue": "0d507b"
           },
           "defaultVariant": "green",
           "state": "ENABLED"
