--- a/deployment/flagd-flag-spec.yaml
+++ b/deployment/flagd-flag-spec.yaml
@@ -16,7 +16,7 @@ spec:
           red: c05543
           green: 2f5230
           blue: 0d507b
-        defaultVariant: green
+        defaultVariant: red
         state: ENABLED
       fib-algo:
         variants:
