--- a/deployment/flagd-flag-spec.yaml
+++ b/deployment/flagd-flag-spec.yaml
@@ -2,6 +2,7 @@ apiVersion: core.openfeature.dev/v1alpha2
 kind: FeatureFlagConfiguration
 metadata:
   name: end-to-end
+  namespace: open-feature-demo
 spec:
   featureFlagSpec:
     flags:
@@ -16,7 +17,7 @@ spec:
           red: c05543
           green: 2f5230
           blue: 0d507b
-        defaultVariant: blue
+        defaultVariant: red
         state: ENABLED
       fib-algo:
         variants:
