--- a/deployment/go-feature-flag.yaml
+++ b/deployment/go-feature-flag.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: open-feature-demo-go-feature-flag-proxy
+  namespace: open-feature-demo
 spec:
   replicas: 1
   selector:
@@ -29,6 +30,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: open-feature-demo-goff-service
+  namespace: open-feature-demo
 spec:
   type: ClusterIP
   selector:
@@ -41,6 +43,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: goff-config
+  namespace: open-feature-demo
 data:
   goff-proxy.yaml: |
     # Go Feature Flag Relay Proxy
