enable auto sync

--- a/environment/argo/app.yaml
+++ b/environment/argo/app.yaml
@@ -17,5 +17,6 @@ spec:
     repoURL: https://github.com/bacherfl/openfeature-argo-demo
     targetRevision: HEAD
   syncPolicy:
+    automated: {}
     syncOptions:
     - CreateNamespace=true
