reduce the reconcile interval of argo

--- a/environment/argo/argo.yaml
+++ b/environment/argo/argo.yaml
@@ -15566,6 +15566,8 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
+data:
+  timeout.reconciliation: "30s"
 ---
 apiVersion: v1
 kind: ConfigMap
