--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -102,8 +102,8 @@ spec:
     app: open-feature-demo
   ports:
     - port: 8013
-      targetPort: 80:pod
-      
+      targetPort: 80
+
 ---
 apiVersion: v1
 kind: ConfigMap
