--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -128,6 +128,7 @@ data:
       server {
         location / {
           proxy_pass http://127.0.0.1:8013;
+          grpc_pass grpc://localhost:8013;
         }
       }
     }
