--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -47,7 +47,7 @@ spec:
                 name: open-feature-demo-env-flag-config
           env:
             - name: FLAGD_HOST_WEB
-              value: 34.142.112.211:8013/flagd
+              value: 34.142.112.211
             - name: FLAGD_PORT_WEB
               value: ""
             - name: HARNESS_KEY
@@ -161,6 +161,9 @@ data:
     http {
       server {
         location / {
+          proxy_pass http://127.0.0.1:30000;
+        }
+        location /flagd {
           proxy_pass http://127.0.0.1:8013;
           grpc_pass grpc://localhost:8013;
         }
