--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -49,7 +49,7 @@ spec:
             - name: FLAGD_HOST_WEB
               value: 34.142.112.211
             - name: FLAGD_PORT_WEB
-              value: ""
+              value: "80"
             - name: HARNESS_KEY
               valueFrom:
                 secretKeyRef:
@@ -163,7 +163,7 @@ data:
         location / {
           proxy_pass http://127.0.0.1:30000;
         }
-        location /flagd {
+        location /schema.v1.Service {
           proxy_pass http://127.0.0.1:8013;
           grpc_pass grpc://localhost:8013;
         }
