--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -15,13 +15,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: flagd-service
+            name: open-feature-demo-service
             port:
               number: 80
-      ##- path: /flagd
-      ##  pathType: Prefix
-      ##  backend:
-      ##    service:
-      ##      name: flagd-service
-      ##      port:
-      ##        number: 8013
