--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -49,7 +49,7 @@ spec:
             - name: FLAGD_HOST_WEB
               value: "34.142.112.211"
             - name: FLAGD_PORT_WEB
-              value: 80
+              value: "80"
             - name: HARNESS_KEY
               valueFrom:
                 secretKeyRef:
@@ -123,21 +123,7 @@ spec:
     app: open-feature-demo
   ports:
     - port: 80
-      targetPort: 30000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: flagd-service
-  namespace: open-feature-demo
-spec:
-  type: ClusterIP
-  selector:
-    app: open-feature-demo
-  ports:
-    - port: 80
       targetPort: 80
-
 ---
 apiVersion: v1
 kind: ConfigMap
