--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -47,7 +47,7 @@ spec:
                 name: open-feature-demo-env-flag-config
           env:
             - name: FLAGD_HOST_WEB
-              value: "34.142.112.211"
+              value: ""
             - name: FLAGD_PORT_WEB
               value: "80"
             - name: HARNESS_KEY
