--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -16,7 +16,8 @@ spec:
         app: open-feature-demo
       annotations:
         openfeature.dev: "enabled"
-        openfeature.dev/featureflagconfiguration: "end-to-end"
+        #openfeature.dev/featureflagconfiguration: "end-to-end"
+        openfeature.dev/flagsourceconfiguration: "source-configuration"
     spec:
       volumes:
         - name: proxy-config
