--- a/environment/ingress/ingress.yaml
+++ b/environment/ingress/ingress.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+    name: open-feature-demo
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
