--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -153,6 +153,9 @@ data:
       server {
         location / {
           proxy_pass http://127.0.0.1:30000;
+          
+          # kill cache
+          expires -1;
         }
         location /schema.v1.Service {
           proxy_pass http://127.0.0.1:8013;
