added ingress for jaeger

--- a/environment/ingress/ingress.yaml
+++ b/environment/ingress/ingress.yaml
@@ -23,3 +23,10 @@ spec:
             name: open-feature-demo-service
             port:
               number: 80
+      - path: /tracing
+        pathType: Prefix
+        backend:
+          service:
+            name: open-feature-demo-jaeger-service
+            port:
+              number: 80
