--- a/deployment/jaeger-tracing.yaml
+++ b/deployment/jaeger-tracing.yaml
@@ -16,6 +16,9 @@ spec:
       containers:
         - name: open-feature-demo-jaeger
           image: jaegertracing/all-in-one:1.38
+          env:
+            - name: QUERY_BASE_PATH
+              value: /tracing
           ports:
             - containerPort: 6832
             - containerPort: 16686
