--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -115,40 +115,6 @@ spec:
                   key: flagsmith-key-web
                   optional: true
 ---
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx
-  namespace: open-feature-demo
-  labels:
-    app: nginx
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      volumes:
-        - name: proxy-config
-          configMap:
-            name: proxy-config
-            items:
-              - key: nginx.conf
-                path: nginx.conf
-      containers:
-        - name: flagd-proxy
-          image: nginx:stable-alpine
-          ports:
-            - containerPort: 80
-          volumeMounts:
-            - name: proxy-config
-              mountPath: /etc/nginx
-              readOnly: true
----
 apiVersion: v1
 kind: Service
 metadata:
@@ -189,12 +155,6 @@ data:
           # kill cache
           expires -1;
         }
-        location /tracing {
-          proxy_pass http://127.0.0.1:30000;
-
-          # kill cache
-          expires -1;
-        }
         location /schema.v1.Service {
           proxy_pass http://127.0.0.1:8013;
           grpc_pass grpc://localhost:8013;
@@ -202,3 +162,104 @@ data:
       }
     }
 
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: nginx-config
+data:
+  nginx.conf: |
+    events {}
+    http {
+      server {
+        location / {
+          proxy_pass http://playground-service:80;
+
+          # kill cache
+          expires -1;
+        }
+        location /tracing {
+          proxy_pass http://open-feature-demo-jaeger-ui:80;
+
+          # kill cache
+          expires -1;
+        }
+        location /schema.v1.Service {
+          proxy_pass http://flagd-service:8013;
+          grpc_pass grpc://localhost:8013;
+        }
+      }
+    }
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: playground-service
+  namespace: open-feature-demo
+spec:
+  type: ClusterIP
+  selector:
+    app: open-feature-demo
+  ports:
+    - port: 80
+      targetPort: 30000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: flagd-service
+  namespace: open-feature-demo
+spec:
+  type: ClusterIP
+  selector:
+    app: open-feature-demo
+  ports:
+    - port: 8013
+      targetPort: 8013
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  namespace: open-feature-demo
+spec:
+  type: ClusterIP
+  selector:
+    app: open-feature-demo
+  ports:
+    - port: 80
+      targetPort: 80
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: nginx
+  namespace: open-feature-demo
+  labels:
+    app: nginx
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      volumes:
+        - name: proxy-config
+          configMap:
+            name: nginx-config
+            items:
+              - key: nginx.conf
+                path: nginx.conf
+      containers:
+        - name: flagd-proxy
+          image: nginx:stable-alpine
+          ports:
+            - containerPort: 80
+          volumeMounts:
+            - name: proxy-config
+              mountPath: /etc/nginx
+              readOnly: true
