--- a/deployment/playground-app.yaml
+++ b/deployment/playground-app.yaml
@@ -26,14 +26,14 @@ spec:
               - key: nginx.conf
                 path: nginx.conf
       containers:
-        #- name: flagd-proxy
-        #  image: nginx:stable-alpine
-        #  ports:
-        #    - containerPort: 80
-        #  volumeMounts:
-        #    - name: proxy-config
-        #      mountPath: /etc/nginx
-        #      readOnly: true
+        - name: flagd-proxy
+          image: nginx:stable-alpine
+          ports:
+            - containerPort: 80
+          volumeMounts:
+            - name: proxy-config
+              mountPath: /etc/nginx
+              readOnly: true
         - name: open-feature-demo
           image: ghcr.io/open-feature/playground-app:v0.8.0
           args:
@@ -173,10 +173,13 @@ data:
     http {
       server {
         location / {
-          proxy_pass http://playground-service:80;
+          proxy_pass http://open-feature-demo-service:80;
 
           # kill cache
           expires -1;
+
+          proxy_pass http://open-feature-demo-service:80;
+          grpc_pass grpc://open-feature-demo-service:80;
         }
         location /tracing {
           proxy_pass http://open-feature-demo-jaeger-ui:80;
@@ -184,38 +187,8 @@ data:
           # kill cache
           expires -1;
         }
-        location /schema.v1.Service {
-          proxy_pass http://flagd-service:8013;
-          grpc_pass grpc://flagd-service:8013;
-        }
       }
     }
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: playground-service
-  namespace: open-feature-demo
-spec:
-  type: ClusterIP
-  selector:
-    app: open-feature-demo
-  ports:
-    - port: 80
-      targetPort: 30000
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: flagd-service
-  namespace: open-feature-demo
-spec:
-  type: ClusterIP
-  selector:
-    app: open-feature-demo
-  ports:
-    - port: 8013
-      targetPort: 8013
 ---
 apiVersion: v1
 kind: Service
