--- a/environment/ingress/ingress.yaml
+++ b/environment/ingress/ingress.yaml
@@ -20,6 +20,13 @@ spec:
         pathType: Prefix
         backend:
           service:
+            name: open-feature-demo-service
+            port:
+              number: 80
+      - path: /tracing
+        pathType: Prefix
+        backend:
+          service:
             name: nginx
             port:
               number: 80
