--- a/environment/ingress/ingress.yaml
+++ b/environment/ingress/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
   name: playground-ingress
   namespace: open-feature-demo
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    #nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   ingressClassName: nginx
@@ -27,7 +27,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: nginx
+            name: open-feature-demo-jaeger-ui
             port:
               number: 80
       
