--- a/deployment/flagd-flag-spec.yaml
+++ b/deployment/flagd-flag-spec.yaml
@@ -33,7 +33,7 @@ spec:
           red: c05543
           green: 2f5230
           blue: 0d507b
-        defaultVariant: red
+        defaultVariant: green
         state: ENABLED
 ---
 apiVersion: core.openfeature.dev/v1alpha2
