--- a/environment/ofo/ofo.yaml
+++ b/environment/ofo/ofo.yaml
@@ -614,6 +614,10 @@ spec:
             description: FlagSourceConfigurationSpec defines the desired state of
               FlagSourceConfiguration
             properties:
+              debugLogging:
+                description: DebugLogging defines whether to enable --debug flag of
+                  flagd sidecar. Default false (disabled).
+                type: boolean
               defaultSyncProvider:
                 description: DefaultSyncProvider defines the default sync provider
                 type: string
@@ -754,7 +758,7 @@ spec:
                 type: integer
               probesEnabled:
                 description: ProbesEnabled defines whether to enable liveness and
-                  readiness probes of flagd sidecar. Default true(enabled)
+                  readiness probes of flagd sidecar. Default true (enabled).
                 type: boolean
               rolloutOnChange:
                 description: RolloutOnChange dictates whether annotated deployments
@@ -769,16 +773,32 @@ spec:
                   to be applied to the sidecar
                 items:
                   properties:
-                    httpSyncBearerToken:
+                    certPath:
+                      description: CertPath is a path of a certificate to be used
+                        by grpc TLS connection
                       type: string
-                    logFormat:
-                      description: LogFormat allows for the sidecar log format to
-                        be overridden, defaults to 'json'
+                    httpSyncBearerToken:
+                      description: HttpSyncBearerToken is a bearer token. Used by
+                        http(s) sync provider only
                       type: string
                     provider:
+                      description: Provider type - kubernetes, http, grpc or filepath
+                      type: string
+                    providerID:
+                      description: ProviderID is an identifier to be used in grpc
+                        provider
+                      type: string
+                    selector:
+                      description: Selector is a flag configuration selector used
+                        by grpc provider
                       type: string
                     source:
+                      description: Source is a URI of the flag sources
                       type: string
+                    tls:
+                      description: TLS - Enable/Disable secure TLS connectivity. Currently
+                        used only by GRPC sync
+                      type: boolean
                   required:
                   - source
                   type: object
@@ -853,7 +873,7 @@ spec:
                 type: integer
               probesEnabled:
                 description: ProbesEnabled defines whether to enable liveness and
-                  readiness probes of flagd sidecar. Default true(enabled)
+                  readiness probes of flagd sidecar. Default true (enabled).
                 type: boolean
               socketPath:
                 description: SocketPath defines the unix socket path to listen on
@@ -900,6 +920,10 @@ spec:
             description: FlagSourceConfigurationSpec defines the desired state of
               FlagSourceConfiguration
             properties:
+              debugLogging:
+                description: DebugLogging defines whether to enable --debug flag of
+                  flagd sidecar. Default false (disabled).
+                type: boolean
               defaultSyncProvider:
                 description: DefaultSyncProvider defines the default sync provider
                 type: string
@@ -1040,7 +1064,7 @@ spec:
                 type: integer
               probesEnabled:
                 description: ProbesEnabled defines whether to enable liveness and
-                  readiness probes of flagd sidecar. Default true(enabled)
+                  readiness probes of flagd sidecar. Default true (enabled).
                 type: boolean
               rolloutOnChange:
                 description: RolloutOnChange dictates whether annotated deployments
@@ -1055,12 +1079,33 @@ spec:
                   configuration to be applied to the sidecar
                 items:
                   properties:
+                    certPath:
+                      description: CertPath is a path of a certificate to be used
+                        by grpc TLS connection
+                      type: string
                     httpSyncBearerToken:
+                      description: HttpSyncBearerToken is a bearer token. Used by
+                        http(s) sync provider only
                       type: string
                     provider:
+                      description: Provider type - kubernetes, http(s), grpc(s) or
+                        filepath
+                      type: string
+                    providerID:
+                      description: ProviderID is an identifier to be used in grpc
+                        provider
+                      type: string
+                    selector:
+                      description: Selector is a flag configuration selector used
+                        by grpc provider
                       type: string
                     source:
+                      description: Source is a URI of the flag sources
                       type: string
+                    tls:
+                      description: TLS - Enable/Disable secure TLS connectivity. Currently
+                        used only by GRPC sync
+                      type: boolean
                   required:
                   - source
                   type: object
@@ -1093,6 +1138,12 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: open-feature-operator-controller-manager
+  namespace: open-feature-operator-system
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: open-feature-operator-flagd-proxy
   namespace: open-feature-operator-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -1187,6 +1238,14 @@ rules:
   - list
   - watch
 - apiGroups:
+  - ""
+  resources:
+  - services
+  verbs:
+  - create
+  - get
+  - list
+- apiGroups:
   - apps
   resources:
   - deployments
@@ -1252,13 +1311,13 @@ rules:
   - update
 - apiGroups:
   - rbac.authorization.k8s.io
+  resourceNames:
+  - open-feature-operator-flagd-kubernetes-sync
   resources:
   - clusterrolebindings
   verbs:
   - get
-  - list
   - update
-  - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -1314,7 +1373,11 @@ subjects:
 - apiGroup: ""
   kind: ServiceAccount
   name: open-feature-operator-controller-manager
-  namespace: system
+  namespace: open-feature-operator-system
+- apiGroup: ""
+  kind: ServiceAccount
+  name: open-feature-operator-flagd-proxy
+  namespace: open-feature-operator-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -1420,7 +1483,12 @@ spec:
         - --sidecar-ram-limit=64M
         command:
         - /manager
-        image: ghcr.io/open-feature/open-feature-operator:v0.2.31
+        env:
+        - name: POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        image: ghcr.io/open-feature/open-feature-operator:v0.2.33
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
